made Controller abstract and created ClassDiagramController, PackageDiagramController that extend the Controller and override the convertTreeToDiagram method